--- a/model_performance_data/settings.toml
+++ b/model_performance_data/settings.toml
@@ -12,11 +12,8 @@ video_context_id = [
 ]
 # LImitiation of script:
 # Video must be in Allegro_Videos database
-# if there is two videos with the same context id . the first video will be taken
+# if there are two videos with the same context id, the first video will be taken
 # no tiff images
-
-
-# EinYahav_Sbnearroad_D20211109_Pn2_SSummer_N00051_CtUninhabited_H015_LcFullDaylight_Ds00550_LtNone_LfPlateaus_VrDesert_StTrainVald_LdTopLight_P09_V00_Mc00_B00_Js00_Dr00_T30_TsTrainVald_Set000_rgb
 
 
 # automatic Flow detection ( ground sea ETC)
